(AngularJS) radio button room-amphiteather selection on key register-edit

--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -18,13 +18,13 @@
         <div class="panel panel-default">
             <div class="panel-heading">Uređivanje podataka vezanih za ključ broj {{tagData}}</div>
             <div class="panel-body">
-                <div ng-init="isRoom=true">
+                <div>
                     <label class="radio-inline">
-                        <input ng-model="isRoom" type="radio" value="isRoom"/>
+                        <input ng-model="isRoom" type="radio" value="1"/>
                         Učionica
                     </label>
                     <label class="radio-inline">
-                        <input ng-model="isRoom" type="radio" value="!isRoom"/>
+                        <input ng-model="isRoom" type="radio" value="2"/>
                         Amfiteatar
                     </label>
                 </div>
