--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div ng-if="!isPreloading" class="panel">
-            <div reader tag_data="tagData" message="message"></div>
+            <div reader tag-data="tagData" message="message"></div>
         </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{tagData}} status</div>
