(Flask) key repr in serializers

--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -11,7 +11,7 @@
         <div ng-if="!isPreloading" class="panel">
             <div reader tag-data="tagData" message="message"></div>
         </div>
-        <div ng-if="!isPreloading" class="panel panel-info">
+        <div class="panel panel-info">
             <div class="panel-heading">{{tagData}}</div>
             <div class="panel-body">{{message}}</div>
         </div>
