--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -12,11 +12,11 @@
             <reader tag-data="tagData" message="message"></reader>
         </div>
         <div class="panel panel-info">
-            <div class="panel-heading"><span ng-bind="tagData"></span> status</div>
-            <div class="panel-body"><span ng-bind="message"></span></div>
+            <div class="panel-heading"><span ng-bind-template="'{{tagData}}'"></span> status</div>
+            <div class="panel-body"><span ng-bind-template="'{{message}}'"></span></div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading">Uređivanje podataka vezanih za ključ <span ng-bind="roomRepr"></span></div>
+            <div class="panel-heading">Uređivanje podataka vezanih za ključ <span ng-bind-template="'{{roomRepr}}'"></span></div>
             <div class="panel-body">
                 <div>
                     <label class="radio-inline">
