--- a/src/src/static/app/reader/reader.html
+++ b/src/src/static/app/reader/reader.html
@@ -1,4 +1,3 @@
-<!--<div class="panel panel-default"></div>-->
 <div class="panel-group">
     <div class="panel panel-primary">
         <div class="panel-heading">Čitač je aktivan, čeka i osluškuje...</div>
@@ -7,8 +6,8 @@
     <div class="panel panel-success">
         <div class="panel-heading">
             <span>Tag ID: <span>{{tagData}}</span></span>
-            <label for="'tagData'">Tag ID:</label>
-            <input disabled name="'tagData'" ng-model="tagData" type="text"/>
+            <label for="tagId">Tag ID:</label>
+            <input disabled id="tagId" name="tagId" ng-model="tagData" type="text"/>
         </div>
     </div>
     <div class="panel panel-danger">
