--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -9,14 +9,14 @@
             </div>
         </div>
         <div ng-if="!isPreloading" class="panel">
-            <div reader tag-data="tagData" message="message"></div>
+            <div reader tag-data="tagId" message="message"></div>
         </div>
         <div class="panel panel-info">
-            <div class="panel-heading">{{tagData}}</div>
+            <div class="panel-heading">{{tagId}}</div>
             <div class="panel-body">{{message}}</div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading">Uređivanje podataka o korisniku s brojem <span>{{tagData}}</span></div>
+            <div class="panel-heading">Uređivanje podataka o korisniku s brojem <span>{{tagId}}</span></div>
             <div class="panel-body">
                 <div class="form-inline">
                     <div class="form-group">
