--- a/src/src/static/app/reader/reader.html
+++ b/src/src/static/app/reader/reader.html
@@ -5,9 +5,9 @@
     </div>
     <div class="panel panel-success">
         <div class="panel-heading">
-            <span>Tag ID: <span>{{tagData}}</span></span>
-            <label for="tagId">Tag ID:</label>
-            <input disabled id="tagId" name="tagId" ng-model="tagData" type="text"/>
+            <!--<span>Tag ID: <span>{{tagData}}</span></span>-->
+            <label for="tagData">Tag ID:</label>
+            <input disabled id="tagData" name="tagData" ng-model="tagData" type="text"/>
         </div>
     </div>
     <div class="panel panel-danger">
