--- a/src/src/static/app/keys/keys.html
+++ b/src/src/static/app/keys/keys.html
@@ -11,13 +11,15 @@
             </div>
         </div>
         <div>
-            Poredati ključeve prema:
-            <select ng-model="keys.orderProp" name="orderProp" id="orderProp">
-                <option value="id">ID ključa</option>
-                <option value="tag_id">Tag ID ključa</option>
-                <option value="room_id">Broju prostorije</option>
-                <option value="sector_name">Odjelu</option>
-                <option value="room_repr">Punom zapisu</option>
+            <label for="orderProp">Poredati ključeve prema:</label>
+            <select ng-model="keys.orderProp"
+                    ng-options="selectedProp.id as selectedProp.name for selectedProp in keys.orderOptions"
+                    name="orderProp" id="orderProp">
+                <!--<option value="id">ID ključa</option>-->
+                <!--<option value="tag_id">Tag ID ključa</option>-->
+                <!--<option value="room_id">Broju prostorije</option>-->
+                <!--<option value="sector_name">Odjelu</option>-->
+                <!--<option value="room_repr">Punom zapisu</option>-->
             </select>
         </div>
         <hr/>
