--- a/src/src/static/app/forms/key-form.html
+++ b/src/src/static/app/forms/key-form.html
@@ -11,11 +11,11 @@
             </div>
         </div>
         <div ng-if="!isPreloading" class="panel">
-            <reader tag-data="tagId" message="message"></reader>
+            <reader tag-data="tagInfo.tagId" message="tagInfo.message"></reader>
         </div>
         <div class="panel panel-info">
-            <div class="panel-heading"><span ng-bind-template="'{{tagId}}'"></span> status</div>
-            <div class="panel-body"><span ng-bind-template="'{{message}}'"></span></div>
+            <div class="panel-heading"><span ng-bind-template="'{{tagInfo.tagId}}'"></span> status</div>
+            <div class="panel-body"><span ng-bind-template="'{{tagInfo.message}}'"></span></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Uređivanje podataka vezanih za ključ
