--- a/src/src/static/app/key-details/key-details.html
+++ b/src/src/static/app/key-details/key-details.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h3>Informacije o ključu broj {{keyId}}</h3>
+        <h3>Informacije o ključu broj {{model.keyId}}</h3>
         <hr/>
     </div>
     <div>
@@ -9,11 +9,11 @@
                 <button ng-click="deleteItem()" class="btn btn-danger">Obriši označene</button>
             </div>
         </div>
-        <div ng-if="keyData!=null">
-            <div key-info="keyData"></div>
-            <div key-sessions key="keyId"></div>
+        <div ng-if="model.keyData!=null">
+            <div key-info="model.keyData"></div>
+            <div key-sessions data-key-id="model.keyId"></div>
         </div>
-        <div ng-if="!keyData">
+        <div ng-if="!(model.keyData)">
             Podaci o ključu ne mogu biti prikazani...
         </div>
     </div>
