--- a/src/src/static/app/user-details/user-details.html
+++ b/src/src/static/app/user-details/user-details.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h3>Pojedinosti o korisniku broj {{userId}}</h3>
+        <h3>Pojedinosti o korisniku broj {{model.userId}}</h3>
         <hr/>
     </div>
     <div>
@@ -9,11 +9,11 @@
                 <button ng-click="deleteItem()" class="btn btn-danger">Obriši odabrane</button>
             </div>
         </div>
-        <div ng-if="userData!=null">
-            <div class="row" user-info="userData"></div>
-            <div user-sessions user="userId"></div>
+        <div ng-if="model.userData!=null">
+            <div class="row" user-info="model.userData"></div>
+            <div user-sessions data-user-id="model.userId"></div>
         </div>
-        <div ng-if="!userData">
+        <div ng-if="!(model.userData)">
             Podaci o korisniku se ne mogu trenutno prikazati...
         </div>
     </div>
