(Login) Flask and Angular

--- a/src/src/static/app/navigation/navigation.html
+++ b/src/src/static/app/navigation/navigation.html
@@ -21,7 +21,10 @@
                         ng-click="navCollapsed = !navCollapsed"
                         ng-href="{{route2.route}}">{{route2.name}}</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul ng-show="isAuthenticated()" class="nav navbar-nav">
+                <auth-dashboard></auth-dashboard>
+            </ul>
+            <ul ng-hide="isAuthenticated()" class="nav navbar-nav navbar-right">
                 <li ng-repeat="route3 in rightNav" ng-class="{ active: isActive(route3.id) }"><a
                         ng-click="navCollapsed = !navCollapsed"
                         ng-href="{{route3.route}}">{{route3.name}}</a></li>
