--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -16,7 +16,8 @@
     <script src="static/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="static/vendor/ng-file-upload/ng-file-upload.min.js"></script>
-    <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script> <!-- for no html5 browsers support -->
+    <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
+    <!-- for no html5 browsers support -->
 
     <script src="static/app/app.js"></script>
     <script src="static/app/config.js"></script>
@@ -24,14 +25,19 @@
     <script src="static/app/shared/template.provider.js"></script>
     <script src="static/app/shared/main.controller.js"></script>
     <script src="static/app/home/home.controller.js"></script>
+
     <script src="static/app/shared-services/images.service.js"></script>
     <script src="static/app/shared-services/keys.service.js"></script>
     <script src="static/app/shared-services/users.service.js"></script>
+    <script src="static/app/shared-services/auth.service.js"></script>
+
+    <script src="static/app/auth-dashboard/auth-dashboard.controller.js"></script>
+    <script src="static/app/auth-dashboard/auth-dashboard.directive.js"></script>
 
     <script src="static/app/navigation/nav.controller.js"></script>
     <script src="static/app/navigation/nav.directive.js"></script>
 
-    <script src="static/app/counter/counter.counter.js"></script>
+    <script src="static/app/counter/counter.controller.js"></script>
     <script src="static/app/counter/counter.directive.js"></script>
 
     <script src="static/app/reader/reader.service.js"></script>
@@ -64,6 +70,8 @@
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
     <script src="static/app/register/user-register.controller.js"></script>
+
+    <script src="static/app/login/login.controller.js"></script>
 
     <script src="static/app/edits/update.service.js"></script>
     <script src="static/app/edits/key-edit.controller.js"></script>
