--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -17,7 +17,7 @@
     <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="static/vendor/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
-    <!-- for no html5 browsers support -->
+    <script src="static/vendor/angular-cookies/angular-cookies.js"></script>
 
     <script src="static/app/app.js"></script>
     <script src="static/app/config.js"></script>
