(AngularJS) updated register and login views to handle new backend APIs for login and register actions

--- a/src/src/static/app/reader/reader.html
+++ b/src/src/static/app/reader/reader.html
@@ -7,7 +7,7 @@
         <div class="panel-heading">
             <label for="tagData">Tag ID:</label>
             <input disabled id="tagData" name="tagData" ng-model="tagData" type="text"/>
-            <counter></counter>
+            <counter tag-data="tagData"></counter>
         </div>
     </div>
     <div class="panel panel-danger">
