--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -7,77 +7,19 @@
     <title>Index</title>
 
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
-    <link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css"/>
-    <link rel="stylesheet" href="static/css/site.css"/>
+    <!-- inject:css -->
 
-    <script src="static/vendor/angular/angular.min.js"></script>
-    <script src="static/vendor/angular-route/angular-route.min.js"></script>
-    <script src="static/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="static/vendor/ng-file-upload/ng-file-upload.min.js"></script>
-    <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
-    <script src="static/vendor/angular-cookies/angular-cookies.js"></script>
+  	<link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css">
 
-    <script src="static/app/app.js"></script>
-    <script src="static/app/config.js"></script>
+  	<link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css">
 
-    <script src="static/app/shared/template.provider.js"></script>
-    <script src="static/app/shared/main.controller.js"></script>
-    <script src="static/app/home/home.controller.js"></script>
+  	<link rel="stylesheet" href="static/css/site.css">
 
-    <script src="static/app/shared-services/images.service.js"></script>
-    <script src="static/app/shared-services/keys.service.js"></script>
-    <script src="static/app/shared-services/users.service.js"></script>
-    <script src="static/app/shared-services/auth.service.js"></script>
+  	<!-- endinject -->
 
-    <script src="static/app/auth-dashboard/auth-dashboard.controller.js"></script>
-    <script src="static/app/auth-dashboard/auth-dashboard.directive.js"></script>
-
-    <script src="static/app/navigation/nav.controller.js"></script>
-    <script src="static/app/navigation/nav.directive.js"></script>
-
-    <script src="static/app/counter/counter.controller.js"></script>
-    <script src="static/app/counter/counter.directive.js"></script>
-
-    <script src="static/app/reader/reader.service.js"></script>
-    <script src="static/app/reader/reader.controller.js"></script>
-    <script src="static/app/reader/reader.directive.js"></script>
-
-    <script src="static/app/sessions/session.service.js"></script>
-    <script src="static/app/sessions/session-info.directive.js"></script>
-    <script src="static/app/sessions/sessions.controller.js"></script>
-
-    <script src="static/app/keys/keys.controller.js"></script>
-    <script src="static/app/keys/key-info.directive.js"></script>
-    <script src="static/app/search-keys/keys-results.directive.js"></script>
-    <script src="static/app/search-keys/keys-search-form.controller.js"></script>
-
-    <script src="static/app/users/users.controller.js"></script>
-    <script src="static/app/users/user-info.directive.js"></script>
-    <script src="static/app/search-users/users-results.directive.js"></script>
-    <script src="static/app/search-users/users-search-form.controller.js"></script>
-
-    <script src="static/app/search-sessions/search-sessions.service.js"></script>
-    <script src="static/app/search-sessions/key.search-sessions.controller.js"></script>
-    <script src="static/app/search-sessions/user.search-sessions.controller.js"></script>
-    <script src="static/app/search-sessions/key-sessions.directive.js"></script>
-    <script src="static/app/search-sessions/user-sessions.directive.js"></script>
-
-    <script src="static/app/key-details/key-details.controller.js"></script>
-    <script src="static/app/user-details/user-details.controller.js"></script>
-
-    <script src="static/app/register/register.service.js"></script>
-    <script src="static/app/register/key-register.controller.js"></script>
-    <script src="static/app/register/user-register.controller.js"></script>
-
-    <script src="static/app/login/login.controller.js"></script>
-
-    <script src="static/app/edits/update.service.js"></script>
-    <script src="static/app/edits/key-edit.controller.js"></script>
-    <script src="static/app/edits/user-edit.controller.js"></script>
-
-    <script src="static/app/keys-seed/keys-seed.controller.js"></script>
+    <!-- inject:js -->
+	<script src="static/angular.app.min.js"></script>
+	<!-- endinject -->
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <nav-bar></nav-bar>
