(build) updated gulp

--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -18,7 +18,7 @@
   	<!-- endinject -->
 
     <!-- inject:js -->
-	<script src="static/angular.app.min.js"></script>
+	<script src="/angular.app.min.js"></script>
 	<!-- endinject -->
 </head>
 <body class="container-fluid" ng-controller="MainController">
