(build) updated gulpfile, also added app description and changed name in descriptionFiles (bower.json, package.json)

--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -4,22 +4,17 @@
     <base href="/"/>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Index</title>
-
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+    <title>RFID Administracija</title>
+    <link rel="shortcut icon" type="image/ico" href="static/favicon.ico"/>
     <!-- inject:css -->
-
-  	<link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css">
-
-  	<link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css">
-
-  	<link rel="stylesheet" href="static/css/site.css">
-
-  	<!-- endinject -->
+    <link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css">
+    <link rel="stylesheet" href="static/css/site.css">
+    <!-- endinject -->
 
     <!-- inject:js -->
-	<script src="/angular.app.min.js"></script>
-	<!-- endinject -->
+    <script src="static/angular.app.min.js"></script>
+    <!-- endinject -->
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <nav-bar></nav-bar>
