--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -13,6 +13,13 @@
     <!-- endinject -->
 
     <!-- inject:js -->
+    <script src="static/vendor/angular/angular.min.js"></script>
+    <script src="static/vendor/angular-route/angular-route.min.js"></script>
+    <script src="static/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="static/vendor/ng-file-upload/ng-file-upload.min.js"></script>
+    <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
+    <script src="static/vendor/angular-cookies/angular-cookies.js"></script>
     <script src="static/angular.app.min.js"></script>
     <!-- endinject -->
 </head>
