(AngularJS) account dashboard now refreshes username on user login data changed - checking via authService

--- a/src/src/static/app/auth-dashboard/auth-dashboard.html
+++ b/src/src/static/app/auth-dashboard/auth-dashboard.html
@@ -1,10 +1,8 @@
 <li class="dropdown-nav">
-    <div class="btn-group">
-        <button class="btn btn-default">
-            Icon|{{ globals.username }}
-        </button>
-        <button class="btn btn-default" ng-click="logout(clearCredentials)">
-            Logout
-        </button>
-    </div>
+    <button class="btn btn-default" ng-click="editProfile()">
+        {{ username }} <span class="glyphicon-wrench"></span>
+    </button>
+    <button class="btn btn-default" ng-click="logout()">
+        Logout
+    </button>
 </li>
