(AngularJS) no more callbacks in user login and register controllers from main scope - username fetched via authService in auth-dashboard

--- a/src/src/static/app/forms/user-form.html
+++ b/src/src/static/app/forms/user-form.html
@@ -71,7 +71,7 @@
                                accept="image/*" type="file"/>
                         <span class="has-error">{{ errorRegistering.imageFile }}</span>
                     </div>
-                    <button ng-click="proceed(setCredentials)" class="btn btn-primary">
+                    <button ng-click="proceed()" class="btn btn-primary">
                         Izvrši
                     </button>
                     <button ng-click="cancel()" class="btn btn-danger">Odustani</button>
