--- a/src/src/static/app/login/login.html
+++ b/src/src/static/app/login/login.html
@@ -4,7 +4,7 @@
             <h1>Prijava</h1>
         </div>
         <div class="panel-body">
-            <form ng-submit="doLogin(setCredentials)" novalidate>
+            <form ng-submit="doLogin()" novalidate>
                 <div class="form-group">
                     <label for="email">Email: </label>
                     <input class="form-control" type="email" ng-model="email" id="email"/>
