--- a/src/src/static/app/auth-dashboard/auth-dashboard.html
+++ b/src/src/static/app/auth-dashboard/auth-dashboard.html
@@ -1,9 +1,9 @@
-<li>
+<li class="navbar navbar-nav">
     <a ng-click="editProfile()">
         {{ username }} <i class="glyphicon glyphicon-wrench"></i>
     </a>
 </li>
-<li>
+<li class="navbar navbar-nav">
     <a ng-click="logout()">
         Logout
     </a>
