(AngularJS) styling navigation

--- a/src/src/static/app/auth-dashboard/auth-dashboard.html
+++ b/src/src/static/app/auth-dashboard/auth-dashboard.html
@@ -1,10 +1,10 @@
 <li class="navbar navbar-nav">
-    <a ng-click="editProfile()">
+    <a ng-click="editProfile()" class="padding-top">
         {{ username }} <i class="glyphicon glyphicon-wrench"></i>
     </a>
 </li>
 <li class="navbar navbar-nav">
-    <a ng-click="logout()">
+    <a ng-click="logout()" class="padding-top">
         Logout
     </a>
 </li>
