(AngularJS) bidning auth-dashboard directive onto navbar as an atribute of div.nav.navbar-nav so that list items with hyperlink elements for login and profile can be navigated properly, same as other navbar hyperlink options (routes)

--- a/src/src/static/app/auth-dashboard/auth-dashboard.html
+++ b/src/src/static/app/auth-dashboard/auth-dashboard.html
@@ -1,8 +1,10 @@
+<!--<li class="navbar navbar-nav nav-padding-top">-->
 <li class="navbar navbar-nav nav-padding-top">
     <a ng-click="editProfile()">
         {{ username }} <i class="glyphicon glyphicon-wrench"></i>
     </a>
 </li>
+<!--<li class="navbar navbar-nav nav-padding-top">-->
 <li class="navbar navbar-nav nav-padding-top">
     <a ng-click="logout()">
         Logout
