--- a/src/src/static/app/navigation/navigation.html
+++ b/src/src/static/app/navigation/navigation.html
@@ -21,8 +21,8 @@
                         ng-click="navCollapsed = !navCollapsed"
                         ng-href="{{route2.route}}">{{route2.name}}</a></li>
             </ul>
-            <ul ng-show="isAuthenticated" class="nav navbar-nav">
-                <auth-dashboard class="navbar navbar-nav"></auth-dashboard>
+            <ul ng-show="isAuthenticated" class="nav navbar-nav" auth-dashboard>
+                <!--<auth-dashboard class="navbar navbar-nav"></auth-dashboard>-->
             </ul>
             <ul ng-hide="isAuthenticated" class="nav navbar-nav">
                 <li ng-repeat="route3 in rightNav" ng-class="{ active: isActive(route3.id) }"><a
