--- a/src/src/static/app/auth-dashboard/auth-dashboard.html
+++ b/src/src/static/app/auth-dashboard/auth-dashboard.html
@@ -1,10 +1,6 @@
 <li>
-    <a ng-click="editProfile()">
-        {{ username }} <i class="glyphicon glyphicon-wrench"></i>
-    </a>
+    <a ng-click="editProfile()" href="">{{ username }} <i class="glyphicon glyphicon-wrench"></i></a>
 </li>
 <li>
-    <a ng-click="logout()">
-        Logout
-    </a>
+    <a ng-click="logout()" href="">Logout</a>
 </li>
