(AngularJS) changed hero image to go full width of window

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,5 +1,4 @@
-<div class="container-fluid">
-    <div id="hero-img"></div>
+<div id="hero-img" class="container-fluid">
     <div id="hero-caption" class="text-center">
         <h3>{{title}}</h3>
         <h5>{{ message }}</h5>
