--- a/src/src/static/index.html
+++ b/src/src/static/index.html
@@ -23,7 +23,7 @@
     <script src="static/angular.app.min.js"></script>
     <!-- endinject -->
 </head>
-<body class="container-fluid" ng-controller="MainController">
+<body ng-controller="MainController">
 <nav-bar></nav-bar>
 <br/>
 <br/>
