(AngularJS) user list ordering - enable reverse ordering with checkbox

--- a/src/src/static/app/users/users.html
+++ b/src/src/static/app/users/users.html
@@ -14,17 +14,13 @@
             <select ng-model="users.orderProp"
                     ng-options="selectedProp.id as selectedProp.name for selectedProp in users.orderOptions"
                     name="orderProp" id="orderProp">
-                <!--<option value="user_id">ID korisnika</option>-->
-                <!--<option value="tag_id">Tag ID</option>-->
-                <!--<option value="role_id">Titula</option>-->
-                <!--<option value="first_name">Ime</option>-->
-                <!--<option value="last_name">Prezime</option>-->
-                <!--<option value="email">Email</option>-->
             </select>
+            <label for="reverseOrder"> Obrnuti redoslijed</label>
+            <input ng-model="reverseOrder" type="checkbox" id="reverseOrder"/>
         </div>
         <hr/>
         <div class="row">
-            <div ng-repeat="item in users.list | orderBy:users.orderProp" user-info="item"></div>
+            <div ng-repeat="item in users.list | orderBy:users.orderProp:users.reverseOrder" user-info="item"></div>
         </div>
     </div>
 </div>
