(AngularJS) variables bound to named controller scopes have to be referenced with controller name in templates, but not inside controller (there you use this)

--- a/src/src/static/app/keys/keys.html
+++ b/src/src/static/app/keys/keys.html
@@ -17,9 +17,9 @@
                     name="orderProp" id="orderProp">
             </select>
             <label for="reverseOrder"> Obrnuti redoslijed</label>
-            <input ng-model="reverseOrder" type="checkbox" id="reverseOrder"/>
+            <input ng-model="keys.reverseOrder" type="checkbox" id="reverseOrder"/>
         </div>
         <hr/>
-        <div ng-repeat="item in keys.list | orderBy:keys.orderProp:reverseOrder" key-info="item"></div>
+        <div ng-repeat="item in keys.list | orderBy:keys.orderProp:keys.reverseOrder" key-info="item"></div>
     </div>
 </div>
