(AngularJS) named controller

--- a/src/src/static/app/users/users.html
+++ b/src/src/static/app/users/users.html
@@ -16,7 +16,7 @@
                     name="orderProp" id="orderProp">
             </select>
             <label for="reverseOrder"> Obrnuti redoslijed</label>
-            <input ng-model="reverseOrder" type="checkbox" id="reverseOrder"/>
+            <input ng-model="users.reverseOrder" type="checkbox" id="reverseOrder"/>
         </div>
         <hr/>
         <div class="row">
