(AngularJS) displaying number of results found with bootstrap badge styling

--- a/src/src/static/app/search-keys/keys-results.html
+++ b/src/src/static/app/search-keys/keys-results.html
@@ -1,5 +1,5 @@
 <div class="container" ng-if="results!=[]">
-    <h3>Rezultati pretrage:</h3>
+    <h3>Rezultati pretrage: <span class="badge">{{ results.length }}</span></h3>
     <hr/>
     <div>
         Poredati ključeve prema:
