(AngularJS:app-name) changed app name, mainApp to administration

--- a/administration/src/static/index.html
+++ b/administration/src/static/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="appMain" lang="en">
+<html ng-app="administration" lang="hr">
 <head>
     <base href="/"/>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>RFID Administracija</title>
     <link rel="shortcut icon" type="image/ico" href="static/favicon.ico"/>
+
     <!-- inject:css -->
     <link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css">
@@ -20,7 +21,7 @@
     <script src="static/vendor/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
     <script src="static/vendor/angular-cookies/angular-cookies.js"></script>
-    <script src="static/angular.app.min.js"></script>
+    <script src="static/js/administration.min.js"></script>
     <!-- endinject -->
 </head>
 <body ng-controller="MainController">
