(AngularJS:sidebar) added sidebar to main index page and removed it from specific views

--- a/administration/src/static/index.html
+++ b/administration/src/static/index.html
@@ -26,6 +26,7 @@
 </head>
 <body ng-controller="MainController">
 <nav-bar></nav-bar>
+<navigation-sidebar ng-if="isUserAuthenticated()"></navigation-sidebar>
 <br/>
 <br/>
 <div ng-view></div>
