(AngularJS:sidebar) not hiding sidebar if user not authanticated

--- a/administration/src/static/index.html
+++ b/administration/src/static/index.html
@@ -26,7 +26,7 @@
 </head>
 <body ng-controller="MainController">
 <nav-bar></nav-bar>
-<navigation-sidebar ng-if="init()"></navigation-sidebar>
+<navigation-sidebar></navigation-sidebar>
 <br/>
 <br/>
 <div ng-view></div>
