(AngularJS:sidebar) sliding sidebar done

--- a/administration/src/static/index.html
+++ b/administration/src/static/index.html
@@ -29,6 +29,6 @@
 <navigation-sidebar></navigation-sidebar>
 <br/>
 <br/>
-<div ng-view></div>
+<div style="margin-left: 38px" ng-view></div>
 </body>
 </html>
