--- a/administration/src/static/not_found.html
+++ b/administration/src/static/not_found.html
@@ -28,8 +28,11 @@
 <nav-bar></nav-bar>
 <br/>
 <br/>
-<div class="container">
-    <h3 style="color: #ac2925;">Izgleda da se dogodila pogreška! Stranica nije pronađena</h3>
+<br/>
+<br/>
+<div class="container text-center">
+    <h3 style="color: #ac2925;">Izgleda da se dogodila pogreška!</h3>
+    <h3>Stranica nije pronađena...</h3>
 </div>
 </body>
 </html>
