(CSS:not_found) 404 error page styling

--- a/administration/src/static/not_found.html
+++ b/administration/src/static/not_found.html
@@ -30,9 +30,9 @@
 <br/>
 <br/>
 <br/>
-<div class="container text-center">
-    <h3 style="color: #ac2925;">Izgleda da se dogodila pogreška!</h3>
-    <h3>Stranica nije pronađena...</h3>
+<div style="font-size: 1.3em;color: #ac2925;" class="container text-center">
+    <div>Izgleda da se dogodila pogreška!</div>
+    <div>Stranica nije pronađena...</div>
 </div>
 </body>
 </html>
