(AngularJS:error-page) added error page as a view partial

--- a/administration/src/static/errors.html
+++ b/administration/src/static/errors.html
@@ -28,11 +28,11 @@
 <nav-bar></nav-bar>
 <br/>
 <br/>
-<br/>
-<br/>
-<div style="font-size: 1.3em;color: #ac2925;" class="container text-center">
-    <div>Izgleda da se dogodila pogreška!</div>
-    <div>Stranica nije pronađena...</div>
-</div>
+<div ng-view></div>
+<script>
+    (function () {
+        location.pathname="/not-found";
+    })();
+</script>
 </body>
 </html>
