--- a/administration/src/static/errors.html
+++ b/administration/src/static/errors.html
@@ -25,14 +25,18 @@
     <!-- endinject -->
 </head>
 <body ng-controller="MainController">
-<nav-bar></nav-bar>
 <br/>
 <br/>
-<div ng-view></div>
-<script>
-    (function () {
-        location.pathname="/not-found";
-    })();
-</script>
+<br/>
+<br/>
+<div style="font-size: 1.3em;color: #ac2925;" class="container text-center">
+    <div>Izgleda da se dogodila pogreška!</div>
+    <div>Stranica nije pronađena...</div>
+    <div>
+        <p style="font-size: 1em;">
+            Vratite se na <a ng-href="/home" href="">glavnu</a> stranicu.
+        </p>
+    </div>
+</div>
 </body>
 </html>
